css fix on IE

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -13,10 +13,8 @@ $dark-green: #074132;
 
 
 .navbar-inner {
-  min-height: 38px !important;
-  background-image: none !important;
-  background-color: $green !important;
-  background-repeat: repeat-x !important;
+  min-height: 38px;
+  @include gradient-vertical($green, $green);
 }
 .navbar .nav > li > a {
   background-color: $green;
